@@ -1,15 +1,15 @@
 /****************************************************************************
  *
- * $Source: $
- * $Date: $
- * $Revision: $
- * $State: $
- * $Author: $
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/pthread/newnode.c,v $
+ * $Date: 2002/12/15 13:16:55 $
+ * $Revision: 1.1 $
+ * $State: Exp $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: $";
+static const char rcs_id[] = "$Id: newnode.c,v 1.1 2002/12/15 13:16:55 admin Exp $";
 #endif
 
 /* Written by Martin Piper and Alex Waugh */
@@ -70,6 +70,9 @@ __pthread_new_node (pthread_t node)
   node->mutex = NULL;
   node->cond = NULL;
   node->nextwait = NULL;
+  pthread_cond_init (&(node->sigwait_cond), NULL);
+  sigemptyset (&(node->pending));
+  sigemptyset (&(node->blocked));
 
   return node;
 }
