@@ -1,3 +1,9 @@
+Wed Feb 9 21:09:05 2005  Alex Waugh  <alex@alexwaugh.com>
+
+	* source/clib/pthread.h, source/clib/signal.h,
+	  source/pthread/newnode.c, source/pthread/signal.c: Add partial
+	  implementation of sigwait().
+
 Mon Feb 7 14:52:18 2005  John-Mark Bell  <jmb202@ecs.soton.ac.uk>
 
 	* source/regexp/{cclass.h, cname.h, engine.h, regcomp.c,
